fltk/Block.h

struct BlockViewConfig {
    Orientation orientation;
    double zoom_speed;

    int block_title_height;
    int track_title_height;
    int sb_size;
    int ruler_size;
    int status_size;
};