fltk/types.h

struct Selection {
    Selection() : start_track(-1), cur_track(-1) {}
    Selection(Color color, int start_track, ScoreTime start_pos, int cur_track,
            ScoreTime cur_pos) :
        color(color), start_track(start_track), start_pos(start_pos),
        cur_track(cur_track), cur_pos(cur_pos)
    {}

    bool operator==(const Selection &o) const {
        return color == o.color && start_track == o.start_track
            && start_pos == o.start_pos && cur_track == o.cur_track
            && cur_pos == o.cur_pos;
    }
    bool operator!=(const Selection &o) const { return !(*this == o); }

    // Both being -1 ensures that checking 'low <= track <= high' will be false
    // for an empty selection.
    bool empty() const { return cur_track == -1 && start_track == -1; }
    int low_track() const { return std::min(start_track, cur_track); }
    int high_track() const { return std::max(start_track, cur_track); }

    Color color;
    int start_track;
    ScoreTime start_pos;
    int cur_track;
    ScoreTime cur_pos;
};
struct ZoomInfo {
    // ScoreTime are bigger than ints, so they have to be clipped.  If they
    // are clipped to INT_MIN/INT_MAX, overflow happens easily when they have
    // pixel offsets added to them.  So make it something with plenty of room
    // but still probably bigger than your monitor.
    enum { max_pixels = INT_MAX / 2 };
    ZoomInfo() : offset(0), factor(1) {}
    ZoomInfo(ScoreTime offset, double factor) :
        offset(offset), factor(std::max(MINIMUM_FACTOR, factor))
    {}
    bool operator==(const ZoomInfo &o) const {
        return offset == o.offset && factor == o.factor;
    }
    bool operator!=(const ZoomInfo &o) const { return !(*this == o); }

    // How many pixels is the given pos at, at this zoom?  This doesn't take
    // the zoom offset into account, so you'll have to subtract that from 'pos'
    // if you want a scroll position.
    int to_pixels(const ScoreTime pos) const {
        // A ScoreTime is not guaranteed to fit in an int.
        double scaled = pos.scale(this->factor);
        return int(round(std::max(double(-max_pixels),
                                  std::min(double(max_pixels), scaled))));
    }

    // Given the current zoom, this many pixels corresponds to how much
    // trackpos?
    ScoreTime to_time(int pixels) const {
        return ScoreTime(double(pixels) / factor);
    }

    ScoreTime offset;
    // 1.0 means that each ScoreTime gets 1 pixel.
    // 2.0 each ScoreTime gets 2 pixels.
    // etc.
    double factor;
};