Ui/BlockImpl.hsc


-- | Get and set the scroll along the track dimension, in pixels.
get_track_scroll :: View -> Fltk Int
get_track_scroll view = fmap fromIntegral (c_get_track_scroll (view_p view))
foreign import ccall unsafe "block_view_get_track_scroll"
    c_get_track_scroll :: Ptr CBlockView -> IO CInt

set_track_scroll :: View -> Int -> Fltk ()
set_track_scroll view offset
    = c_set_track_scroll (view_p view) (Util.c_int offset)
foreign import ccall unsafe "block_view_set_track_scroll"
    c_set_track_scroll :: Ptr CBlockView -> CInt -> IO ()

get_selection :: View -> SelNum -> Fltk Selection
get_selection view selnum
    = c_block_view_get_selection (view_p view) (Util.c_int selnum) >>= peek
foreign import ccall unsafe "block_view_get_selection"
    c_block_view_get_selection :: Ptr CBlockView -> CInt -> IO (Ptr Selection)

set_selection :: View -> SelNum -> Selection -> Fltk ()
set_selection view selnum sel =
    with sel $ \selp ->
        c_block_view_set_selection (view_p view) (Util.c_int selnum) selp
foreign import ccall unsafe "block_view_set_selection"
    c_block_view_set_selection :: Ptr CBlockView -> CInt -> Ptr Selection
        -> IO ()

get_track_width :: View -> TrackNum -> Fltk Width
get_track_width view at_ = do
    ntracks <- tracks (view_block view)
    width <- c_block_view_get_track_width (view_p view)
        (Util.in_range "get_track_width" 0 ntracks at_)
    return (fromIntegral width)
foreign import ccall unsafe "block_view_get_track_width"
    c_block_view_get_track_width :: Ptr CBlockView -> CInt -> IO CInt

set_track_width :: View -> TrackNum -> Width -> Fltk ()
set_track_width view at_ width = do
    ntracks <- tracks (view_block view)
    c_block_view_set_track_width (view_p view)
        (Util.in_range "set_track_width" 0 ntracks at_) (Util.c_int width)
foreign import ccall unsafe "block_view_set_track_width"
    c_block_view_set_track_width :: Ptr CBlockView -> CInt -> CInt -> IO ()


-- * storable

instance Storable Selection where
    sizeOf _ = #size Selection
    alignment _ = undefined
    peek = peek_selection
    poke = poke_selection

peek_selection selp = do
    start_track <- (#peek Selection, start_track) selp :: IO CInt
    start_pos <- (#peek Selection, start_pos) selp
    tracks <- (#peek Selection, tracks) selp :: IO CInt
    duration <- (#peek Selection, duration) selp
    return $ Selection (fromIntegral start_track) start_pos
        (fromIntegral tracks) duration

poke_selection selp (Selection start_track start_pos tracks duration) =
    do
        (#poke Selection, start_track) selp (Util.c_int start_track)
        (#poke Selection, start_pos) selp start_pos
        (#poke Selection, tracks) selp (Util.c_int tracks)
        (#poke Selection, duration) selp duration

instance Storable Zoom where
    sizeOf _ = #size ZoomInfo
    alignment _ = undefined
    peek = peek_zoom
    poke = poke_zoom

peek_zoom zoomp = do
    offset <- (#peek ZoomInfo, offset) zoomp
    factor <- (#peek ZoomInfo, factor) zoomp :: IO CDouble
    return $ Zoom offset (realToFrac factor)

poke_zoom zoomp (Zoom offset factor) = do
    (#poke ZoomInfo, offset) zoomp offset
    (#poke ZoomInfo, factor) zoomp (Util.c_double factor)

instance Storable ViewConfig where
    sizeOf _ = #size BlockViewConfig
    alignment _ = undefined
    peek = error "no peek for ViewConfig"
    poke = poke_config

poke_config configp (ViewConfig
        { vconfig_zoom_speed = zoom_speed
        , vconfig_block_title_height = block_title_height
        , vconfig_track_title_height = track_title_height
        , vconfig_sb_size = sb_size
        , vconfig_ruler_size = ruler_size
        , vconfig_status_size = status_size
        })
    = do
        (#poke BlockViewConfig, zoom_speed) configp zoom_speed
        (#poke BlockViewConfig, block_title_height) configp
            (Util.c_int block_title_height)
        (#poke BlockViewConfig, track_title_height) configp
            (Util.c_int track_title_height)
        (#poke BlockViewConfig, sb_size) configp (Util.c_int sb_size)
        (#poke BlockViewConfig, ruler_size) configp (Util.c_int ruler_size)
        (#poke BlockViewConfig, status_size) configp (Util.c_int status_size)
